Archive2/3d/1a224ef4dd3224/output
main.cpp:4:81: error: expected primary-expression before '*' token
  template<typename S, typename T> auto produkt(const S a, const T b)->decltype(S*T)
                                                                                 ^
main.cpp:4:83: error: expected primary-expression before ')' token
  template<typename S, typename T> auto produkt(const S a, const T b)->decltype(S*T)
                                                                                   ^
main.cpp: In function 'int main()':
main.cpp:14:30: error: 'produkt' was not declared in this scope
 const auto res = produkt(pi,e);
                              ^
